--- a/sass/site/secondary/_widgets.scss
+++ b/sass/site/secondary/_widgets.scss
@@ -15,7 +15,7 @@
 #nav_menu-3{
 	width: $size__site-sidebar;
 
-	z-index: -1;
+	//z-index: -1;
 }
 
 #nav_menu-3.element-is-sticky{
